# verify

./: .travis.yml  CMakeLists.txt  README.md  a.c  appveyor.yml  lgtm.yml  main.c
.github/workflows/: ccpp.yml  main.yml
